# scrt-rng

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.dev  Makefile
examples/: schema.rs
src/: contract.rs  lib.rs
test/: test.sh
