[package]
name = "scrt-x"
version = "0.1.0"
authors = ["HarryR"]
edition = "2021"


[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
debuginfo = false


[lib]
crate-type = ["cdylib", "rlib"]


[features]
default = ["rng_xood"]
rng_xood = ["xoodyak"]
rng_blake2 = ["blake2"]
rng_sha256chacha20 = ["rand_chacha", "sha2"]


[dependencies]
secret-cosmwasm-storage = "0.10"
secret-cosmwasm-std = "0.10"
serde = "1.0"
schemars = "0.7.6"
blake2 = { version = "0.10", optional = true }
xoodyak = { version = "0.7", optional = true }
rand_chacha = { version = "0.3", optional = true }
sha2 = { version = "0.10", optional = true }
